--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -18,12 +18,14 @@
 <nav class="navbar navbar-expand-lg bg-body-light border-bottom sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="/listings"><i class="fa-solid fa-compass"></i></a>
+      <h1 class="p-3 mr-2">WanderLust</h1>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" >
+        
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="/listings"><b>Explore</b></a>
+         
 
          
          
@@ -36,7 +38,7 @@
       </form>
         </div>
 
-          <div class="navbar-nav ms-auto">
+          <div class="navbar-nav ms-auto " style="background-color: white;">
              <a class="nav-link" href="/listings/new">Add new listing</a>
             <% if(!currUser) {%>
           <a class="nav-link"  href="/signup"><b>Sign Up</b></a>  
