--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -3,10 +3,10 @@
     <div class="col-8 offset-2" >
 <body>
     
-    <h3>Create new Listing</h3>
+    <h3 class="pt-3" style="font-style: italic;">Create new Listing</h3>
     <br><br>
     <form action="/listings" method="post" novalidate class="needs-validation" enctype="multipart/form-data">
-        <div class="mb-3">  
+        <div class="mb-3 ">  
                <label for="title" class="form-label">Enter title</label>
             <input name="listing[title]" placeholder="enter the title" type="text" class="form-control" required>
             <div class="valid-feedback">
