--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
-    <div class="f-info">
-        <div class="f-info-socials">
+    <div class="f-info pt-3">
+        <div class="f-info-socials " >
             <i class="fa-brands fa-square-facebook"></i>
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
@@ -8,7 +8,7 @@
         <div>&copy;WanderLust private limited</div>
         <div class="f-info-links">
             <a href="/privacy">Privacy</a>
-            <a href="/terms">Terms</a>
+           
         </div>
     </div>
   
