--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -15,10 +15,10 @@
 
 </style>
     
-<nav class="navbar navbar-expand-lg bg-body-light border-bottom sticky-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/listings"><i class="fa-solid fa-compass"></i></a>
-      <h1 class="p-3 mr-2">WanderLust</h1>
+<nav class="navbar navbar-expand-lg bg-body-light border-bottom sticky-top" >
+    <div class="container-fluid"  style="background-color: white;">
+     
+      <h1 class="p-3 mr-2" ><a href="/listings" style="text-decoration: none; color: black; font-style: italic;"><span style="color: red;">Wander</span>Lust</a></h1>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" >
         
         <span class="navbar-toggler-icon"></span>
@@ -38,14 +38,14 @@
       </form>
         </div>
 
-          <div class="navbar-nav ms-auto " style="background-color: white;">
+          <div class="navbar-nav ms-auto pb-4">
              <a class="nav-link" href="/listings/new">Add new listing</a>
-            <% if(!currUser) {%>
+            <% if(!locals.currUser) {%>
           <a class="nav-link"  href="/signup"><b>Sign Up</b></a>  
          <a class="nav-link" href="/login"> <b>Login</b> </a> 
           <% } %>
 
-           <%if(currUser) { %>
+           <%if(locals.currUser) { %>
           <a class="nav-link " href="/logout"><b> log out</b></a>
           <a class="pt-2 ml-2 delbtn"  style="text-decoration: none;" href="/listings/<%=currUser._id%>">delete Account</a>
            <% } %>
