--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,15 +1,30 @@
 <% layout("listings/layouts/boilerplate") %>
+<style>
+@media (min-width : 300px) and (max-width : 1024px) {
+  .review-card{
+    width: 13rem;
+    padding-right: 2rem;
+   
+    text-align: left;
+    
+  }
 
+  .show-info{
+
+  }
+}
+
+</style>
   <body>
-    <div class="row">
+    <div class="row ">
       <div class="col-8 offset-3">
-        <h3>
+        <h2 class="mt-3">
           <%=listing.title%>
-        </h3> <br>
+        </h2> <br>
       </div>
       <div class="card listing-card col-6 offset-3">
-        <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="listing-img">
-        <div class="card-body">
+        <img src="<%=listing.image.url%>" class="card-img-top show-img mb-2" alt="listing-img">
+        <div class="card-body show-info">
           <p class="card-text"> <i> Owned by: <%=listing.owner.username%> </i></p>
 
           <p class="card-text">
@@ -85,8 +100,8 @@
             <p><b>All Reviews</b></p>
             <div class="row">
               <% for(review of listing.reviews){ %>
-                <div class="card col-5 mb-3 ms-3">
-                  <div class="card-body">
+                <div class="card col-5 mb-3 review-card">
+                  <div class="card-body inner" style="width: 100%;">
                     <h5 class="card-title">@<%=review.author.username%>
                     </h5>
                     </p>
