--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -40,7 +40,7 @@
 
           <div class="navbar-nav ms-auto pb-4">
              <a class="nav-link" href="/listings/new">Add new listing</a>
-            <% if(!locals.currUser) {%>
+            <% if(!local.currUser) {%>
           <a class="nav-link"  href="/signup"><b>Sign Up</b></a>  
          <a class="nav-link" href="/login"> <b>Login</b> </a> 
           <% } %>
