--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -10,7 +10,7 @@
   }
 
   .show-info{
-
+    width: 150px;
   }
 }
 
@@ -27,7 +27,7 @@
         <div class="card-body show-info">
           <p class="card-text"> <i> Owned by: <%=listing.owner.username%> </i></p>
 
-          <p class="card-text">
+          <p class="card-text" >
             <%=listing.description %>
           </p>
 
